# what2eat

./: LICENSE  pyproject.toml
src/: main.py
src/core/: config.py
